till video no.219

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -42,6 +42,20 @@
 </div>
 
 </div>
+
+  <div class="extra content">
+  <form class="ui reply form">
+  <div class="field">
+    <div class="ui fluid icon input">
+    
+   <input type="text" placeholder="send messages...">
+      <i class="bordered edit link icon"></i>
+  </div>
+
+    </div>
+    </form>
+  </div>
+
 </div>
 
   </div>
