--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,8 +9,8 @@
 <div class="ui fluid raised card chatbox">
   <div class="content">
 
-    <div class="ui small feed">
-  <h4 class="ui header">Followers Activity</h4>
+    <div class="ui feed">
+  
   <div class="event">
     <div class="content">
       <div class="summary">
@@ -35,7 +35,7 @@
   <div class="event">
     <div class="content">
       <div class="summary">
-         <a>Christian Rocha</a> signed up for the  site.
+         <em>Christian Rocha</em> Test messages
       </div>
     </div>
   </div>
