till video no.228 error and success msg passing in UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <%= render 'layouts/navbar.html.erb' %>
 </div>
   <div class="ui container">
+  <%= render 'layouts/messages.html.erb' %>
     <%= yield %>
     </div>
   </body>
